Refactor game role assignments
